# libreddit

./: Cargo.toml  Dockerfile  README.md
deno/: serve.ts
netlify/edge-functions/: serve.ts
pkg/: libreddit.d.ts  libreddit.js  libreddit_bg.js  libreddit_bg.wasm  libreddit_bg.wasm.d.ts  package.json
src/: client.rs  config.rs  duplicates.rs  instance_info.rs  lib.rs  main.rs  post.rs  search.rs  server.rs  settings.rs  subreddit.rs  user.rs  utils.rs
templates/: base.html
