[package]
name = "libreddit"
description = " Alternative private front-end to Reddit"
license = "AGPL-3.0"
repository = "https://github.com/spikecodes/libreddit"
version = "0.27.2"
authors = ["spikecodes <19519553+spikecodes@users.noreply.github.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
askama = { version = "0.11.1", default-features = false }
cached = { version = "0.42.0", default-features = false, features = ["proc_macro", "wasm"] }
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
cookie = "0.16.2"
futures-lite = "1.12.0"
percent-encoding = "2.2.0"
route-recognizer = "0.3.1"
serde_json = "1.0.91"
time = { version = "0.3.17", features = ["wasm-bindgen"] }
rust-embed = { version = "6.4.2", features = ["include-exclude"] }
once_cell = "1.17.0"
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
web-sys = { version = "0.3.60", features = ["Request", "Response", "Window", "Headers", "Url", "Blob", "ResponseInit", "RequestInit", "UrlSearchParams", "ReadableStream", "RequestRedirect", "FormData"] }
wasm-bindgen-futures = "0.4.33"
serde-wasm-bindgen = "0.4.5"
gloo-console = "0.2.3"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
lipsum = "0.8.2"
sealed_test = "1.0.0"

[profile.release]
codegen-units = 1
lto = true
strip = "symbols"
